--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="/images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
